--- a/editor.html
+++ b/editor.html
@@ -41,35 +41,35 @@
         <div class="inner" id="controls" height="500px">
             <table class="home">
                 <tr id="row1" style="display: none">
-                    <td>Param1</td>
+                    <td>Offset X</td>
                     <td id="slider1Container"></td>
                 </tr>
                 <tr id="row2" style="display: none">
-                    <td>Param2</td>
+                    <td>Offset Y</td>
                     <td id="slider2Container"></td>
                 </tr>
                 <tr id="row3" style="display: none">
-                    <td>Param3</td>
+                    <td>Arc X</td>
                     <td id="slider3Container"></td>
                 </tr>
                 <tr id="row4" style="display: none">
-                    <td>Param4</td>
+                    <td>Arc Y</td>
                     <td id="slider4Container"></td>
                 </tr>
                 <tr id="row5" style="display: none">
-                    <td>Param5</td>
+                    <td>Arc W</td>
                     <td id="slider5Container"></td>
                 </tr>
                 <tr id="row6" style="display: none">
-                    <td>Param6</td>
+                    <td>Arc H</td>
                     <td id="slider6Container"></td>
                 </tr>
                 <tr id="row7" style="display: none">
-                    <td>Param7</td>
+                    <td>Arc Start</td>
                     <td id="slider7Container"></td>
                 </tr>
                 <tr id="row8" style="display: none">
-                    <td>Param8</td>
+                    <td>Arc Stop</td>
                     <td id="slider8Container"></td>
                 </tr>
                 <tr id="row9" style="display: none">
