Tidying up files, edits to animation, update preview.jpg

--- a/editor.html
+++ b/editor.html
@@ -73,15 +73,15 @@
                     <td id="slider8Container"></td>
                 </tr>
                 <tr id="row9" style="display: none">
-                    <td>Param9</td>
+                    <td>rectSize</td>
                     <td id="slider9Container"></td>
                 </tr>
                 <tr id="row10" style="display: none">
-                    <td>Param10</td>
+                    <td>CornerRoundedness</td>
                     <td id="slider10Container"></td>
                 </tr>
                 <tr id="row11" style="display: none">
-                    <td>Param11</td>
+                    <td>Center</td>
                     <td id="slider11Container"></td>
                 </tr>
                 <tr id="row12" style="display: none">
