--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <script language="javascript" type="text/javascript" src="exhibition.js"></script>
 
   <meta
-    name="Letterforms by UWCC"
-    content="Code driven letterforms."
+    name="Spectrum by Hannah Kai Fong"
+    content="Code driven letterforms exploring a CMYK colourway and negative space."
   />
-  <meta name="description" content="Code driven letterforms" />
-  <meta property="og:title" content="Letterforms by UWCC" />
+  <meta name="description" content="Code driven letterforms exploring a CMYK colourway and negative space." />
+  <meta property="og:title" content="Spectrum by Hannah Kai Fong" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://uwcc.github.io/23.MDDN242_Parametric_Design/" />
-  <meta property="og:image" content="https://uwcc.github.io/23.MDDN242_Parametric_Design/preview.jpg" />
+  <meta property="og:url" content="https://23-2-dsdn242.github.io/mddn242-parametric-design-kaifohann/" />
+  <meta property="og:image" content="https://23-2-dsdn242.github.io/mddn242-parametric-design-kaifohann/preview.jpg" />
   <meta property="og:image:width" content="960" />
   <meta property="og:image:height" content="500" />
-  <meta property="og:description" content="Code driven letterforms" />
+  <meta property="og:description" content="Code driven letterforms exploring a CMYK colourway and negative space." />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@uwcc" />
-  <meta name="twitter:title" content="Letterforms by UWCC" />
-  <meta name="twitter:description" content="Code driven letterforms" />
-  <meta name="twitter:image" content="https://uwcc.github.io/23.MDDN242_Parametric_Design/preview.jpg" />
+  <meta name="twitter:title" content="Spectrum by Hannah Kai Fong" />
+  <meta name="twitter:description" content="Code driven letterforms exploring a CMYK colourway and negative space." />
+  <meta name="twitter:image" content="https://23-2-dsdn242.github.io/mddn242-parametric-design-kaifohann/preview.jpg" />
 
 </head>
 <body style="background-color:white">
