Final changes + readme updated

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script language="javascript" type="text/javascript" src="exhibition.js"></script>
 
   <meta
-    name="Spectrum by Hannah Kai Fong"
+    name="SPECTRUM by Hannah Kai Fong"
     content="Code driven letterforms exploring a CMYK colourway and negative space."
   />
   <meta name="description" content="Code driven letterforms exploring a CMYK colourway and negative space." />
-  <meta property="og:title" content="Spectrum by Hannah Kai Fong" />
+  <meta property="og:title" content="SPECTRUM by Hannah Kai Fong" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://23-2-dsdn242.github.io/mddn242-parametric-design-kaifohann/" />
   <meta property="og:image" content="https://23-2-dsdn242.github.io/mddn242-parametric-design-kaifohann/preview.jpg" />
@@ -20,7 +20,7 @@
   <meta property="og:description" content="Code driven letterforms exploring a CMYK colourway and negative space." />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@uwcc" />
-  <meta name="twitter:title" content="Spectrum by Hannah Kai Fong" />
+  <meta name="twitter:title" content="SPECTRUM by Hannah Kai Fong" />
   <meta name="twitter:description" content="Code driven letterforms exploring a CMYK colourway and negative space." />
   <meta name="twitter:image" content="https://23-2-dsdn242.github.io/mddn242-parametric-design-kaifohann/preview.jpg" />
 
